Fix responsiveness issues on iPhone

--- a/src/RankingPage.css
+++ b/src/RankingPage.css
@@ -7,7 +7,7 @@
 @custom-media --desktop (min-width: 700px);
 
 .button {
-  height: 32px;
+  min-height: 32px;
   border: 0;
   border-radius: 2px;
   background-color: var(--light-gray-color);
@@ -59,7 +59,7 @@
 .user {
   display: flex;
   align-items: center;
-  height: 48px;
+  min-height: 48px;
   padding: 5px 0;
   border-bottom: 1px solid var(--light-gray-color);
   text-decoration: none;
@@ -87,11 +87,23 @@
   font-size: 18px;
 }
 
+.stats {
+  display: flex;
+  flex-direction: column;
+
+  @media (--desktop) {
+    flex-direction: row;
+  }
+}
+
 .stat {
-  flex: 0 1 70px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+
+  @media (--desktop) {
+    flex: 0 1 70px;
+  }
 }
 
 .stat-icon {
