--- a/src/RepoPage.css
+++ b/src/RepoPage.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   align-items: center;
   padding: 30px 0;
+  text-align: center;
 }
 
 .link {
